// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSaHfr isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
            >
              <span
                className="sc-kstrdz cYoIXh"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource4"
            onClick={[Function]}
            title="resource4"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource4
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:36:03.000Z"
                  title="2017-12-21T15:36:03.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource9"
            onClick={[Function]}
            title="resource9"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource9
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:58.000Z"
                  title="2017-12-21T15:35:58.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource19"
            onClick={[Function]}
            title="resource19"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource19
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:48.000Z"
                  title="2017-12-21T15:35:48.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource29"
            onClick={[Function]}
            title="resource29"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource29
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:38.000Z"
                  title="2017-12-21T15:35:38.000Z"
                >
                  &lt;30s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource39"
            onClick={[Function]}
            title="resource39"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource39
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:28.000Z"
                  title="2017-12-21T15:35:28.000Z"
                >
                  &lt;45s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource49"
            onClick={[Function]}
            title="resource49"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource49
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:18.000Z"
                  title="2017-12-21T15:35:18.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/resource54"
            onClick={[Function]}
            title="resource54"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  resource54
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:13.000Z"
                  title="2017-12-21T15:35:13.000Z"
                >
                  &lt;1m ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSaHfr isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
            >
              <span
                className="sc-kstrdz cYoIXh"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSaHfr isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
            >
              <span
                className="sc-kstrdz cYoIXh"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/vigoda"
            onClick={[Function]}
            title="vigoda"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:36:07.000Z"
                  title="2017-12-21T15:36:07.000Z"
                >
                  &lt;5s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/snack"
            onClick={[Function]}
            title="snack"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                <time
                  dateTime="2017-12-21T15:35:57.000Z"
                  title="2017-12-21T15:35:57.000Z"
                >
                  &lt;15s ago
                </time>
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-iBPRYJ jNbGZh Sidebar-resources"
>
  <div
    className="sc-fubCfw"
  >
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ sc-crrsfI fKFkSC cKzMdO"
        >
          <a
            className="sc-pFZIQ sc-jrAGrp gITkdQ jSaHfr isSelected"
            href="/"
            onClick={[Function]}
          >
            <div
              className="sc-gsTCUz gURyfg isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
            >
              <span
                className="sc-kstrdz cYoIXh"
              >
                All
              </span>
            </div>
          </a>
        </li>
      </ul>
    </div>
    <div>
      <div
        className="sc-fodVxV bgoZhk"
      >
        resources
      </div>
      <ul
        className="sc-fFubgz jIfaex"
      >
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/vigoda"
            onClick={[Function]}
            title="vigoda"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  vigoda
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                —
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
        <li
          className="sc-bdfBwQ fKFkSC  isBuilding"
        >
          <button
            className="sc-eCssSg bZRUpx"
            onClick={[Function]}
            title="pin"
          >
            <svg
              className="sc-hKgILt diVeFN"
            >
              pin-resource-filled.svg
            </svg>
          </button>
          <a
            className="sc-pFZIQ gITkdQ  isBuilding"
            href="/r/snack"
            onClick={[Function]}
            title="snack"
          >
            <div
              className="sc-kEjbxe ikFKQb"
            >
              <div
                className="sc-gsTCUz gURyfg isHealthy"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl sc-bqyKva ffqbbn dXPzUm"
              >
                <span
                  className="sc-kstrdz cYoIXh"
                >
                  snack
                </span>
              </div>
              <span
                className="sc-hBEYos bwuTbc"
              >
                —
              </span>
              <button
                className="sc-gKsewC ljQRUE SidebarTriggerButton 
          "
                disabled={true}
                onClick={[Function]}
                title="Cannot trigger an update while resource is updating or update is pending."
              />
            </div>
            <div
              className="sc-iqHYGH kQyqCY"
            >
              <div
                className="sc-gsTCUz gURyfg isBuilding"
              >
                <span>
                   
                </span>
              </div>
              <div
                className="sc-dQppl ffqbbn"
              >
                Updating…
              </div>
            </div>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
